# openreply

./: .env.example  .gitattributes  .gitignore  .mcp.json  .venv  ARCHITECTURE.md  BETA.md  CHANGELOG.md  CHANGES-2026-06.md  CLI_REFERENCE.md  CONTRIBUTING.md  FEATURES.md  LAUNCH.md  LICENSE  LICENSING_AND_DEPLOY.md  MCP_TOOLS.md  README.md  RELEASE.md  SOCIAL_CONTENT_TOOL_PLAN.md  VISION.md  gapmap-cli.spec  pyproject.toml  reddit-cli.spec
app-tauri/: .gitignore  README.md  index.html  package-lock.json  package.json  splash.html  tailwind.config.js  variant-6-reference.html  vite.config.js
app-tauri/src-tauri/: .gitignore  .taurignore  Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
app-tauri/src-tauri/binaries/: README.md
app-tauri/src-tauri/capabilities/: default.json
app-tauri/src-tauri/icons/: icon.icns
app-tauri/src-tauri/src/: cli.rs  commands.rs  db.rs  main.rs  persona_cmds.rs  schedule.rs  worker.rs
changelogs/: 2026-04-19_01_ollama-gui-fix-lucide-responsive.md  2026-04-19_02_ollama-phase2-pull-delete-start-stop.md  2026-04-19_03_python-tests-and-sidecar-bypass.md  2026-04-19_04_mvp-p0-p1-p2-complete.md  2026-04-19_04_topics-screen-no-such-table-fix.md  2026-04-19_05_topic-enrich-gate-and-active-collect.md  2026-04-19_06_research-loop-design-and-roadmap.md  2026-04-19_07_persist-solutions-module.md  2026-04-19_07_splash-theme-match-app.md  2026-04-19_08_byok-curated-model-chips.md  2026-04-19_08_research-solutions-cli-command.md  2026-04-19_08_tauri-security-splash-ci.md  2026-04-19_09_tauri-run-solutions-pipeline-command.md  2026-04-19_09_topic-page-ui-polish.md  2026-04-19_09_ui-responsive-audit-inline-cleanup.md  2026-04-19_10_api-cache-dedup-sidebar-perf.md  2026-04-19_10_fix-provider-routing-openai-compat.md  2026-04-19_10_solutions-tab-ui-module.md  2026-04-19_11_mount-solutions-tab-topic-screen.md  2026-04-19_11_parallel-multi-source-collect.md  2026-04-19_11_topic-tab-preload.md  2026-04-19_12_evidence-one-spawn-and-ttls.md  2026-04-19_12_gap-map-theme-match-app.md  2026-04-19_13_research-pdfs-first-class-plus-build-guide.md  2026-04-19_13_ui-polish-fade-shortcuts-retry.md  2026-04-19_14_live-data-mtime-poll.md  2026-04-19_14_runpy-warning-fix-and-readme-pointer.md  2026-04-19_15_chat-evidence-research-ux-polish.md  2026-04-19_15_map-graph-stats-strip.md  2026-04-19_16_dynamic-provider-models.md  2026-04-19_16_trends-tab-temporal-gaps.md  2026-04-19_17_every-source-polite-plus-youtube.md  2026-04-19_17_quick-extract-gaps-button.md  2026-04-19_18_export-graph-json-button.md  2026-04-19_18_ollama-timeout-plus-data-dir-diagnosis.md  2026-04-19_19_posts-tab-corpus-browser.md  2026-04-19_20_reddit-search-screen.md  2026-04-19_20_retrieval-palace-chromadb.md  2026-04-19_21_watch-screen-live-stream.md  2026-04-19_22_product-brief.md  (+517 more)
data-validate-ats-resume-and-job-search-apps/: findings.md  gap-map.html  gapFind.md  report-pro.md  tweet.md
data-validate-product-research-tools-dovetail-condens-notably/: findings.md  gap-map.html  tweet.md
data-validate-user-research-and-voice-of-customer-tools/: findings.md  gap-map.html  tweet.md
data-validate-ux-research-saas/: findings.md  gap-map.html  report-pro.md  tweet.md
docs/: 2026-04-22_cursor-mcp-timeout-fix.md  2026-04-22_map-tab-hang-memory-leak-fix.md  2026-04-22_topic-tabs-map-evidence-stability-fix.md  2026-06-01-paper-knowledge-workflow-design.md  ALGORITHM_ROADMAP.md  APP_ANALYSIS_2026-06-28.md  BUILD-PROGRESS.md  BUILD_PLAN_ALL_TIERS.md  CI_RELEASE_PIPELINE.md  COMPETITIVE_ANALYSIS.md  CROSS_PLATFORM_PACKAGING.md  DESIGN.md  DEVICE_ACTIVATION_FLOW.md  DUAL_MODE_PIVOT.md  FEATURES.md  FLOW_VERIFICATION.md  FUTURE_SCOPE.md  GAP_MAP_GUIDE.md  GAP_MAP_METHODOLOGY.md  HOW_TO_USE.md  IMPLEMENTATION_FLOW.md  INTERVIEW_PREP.md  MCP_INFRA.md  MCP_VERIFICATION.md  MISSING_AND_NEXT.md  ONBOARDING_PROFILE_UI_AUDIT.md  OPENREPLY_DESIGN.md  OPENREPLY_LEARNINGS.md  OPENREPLY_MASTER.md  OPENREPLY_RESHAPE.md  OPENREPLY_STATUS.md  PERFORMANCE_CATALOG.md  PERSONA_GROUNDING_AND_AUTORESEARCH_PLAN.md  PRODUCT-DISCOVERY-COVERAGE.md  PRODUCT_GAPS.md  PROJECT_STATUS.md  RELEASE_DISTRIBUTION.md  RESEARCH-MODE.md  RESEARCH-WRITER-PLAN.md  RESEARCH_METHODOLOGY.md  (+32 more)
html-demo/: v1.html  v2.html  v3.html  v4.html  v5.html
html-demo-2/: v1.html  v2.html  v3.html  v4.html  v5.html
paper_meditation_brainwave/: draft_with_citations.md  export_meta.json  findings.md  literature_review.md  outline.json
prompts/: complaints.yaml  concept.yaml  diy.yaml  empathy.yaml  features.yaml  insights_synthesis.yaml  kano.yaml  moscow.yaml  painpoints.yaml  queries.yaml  sentiment_source.yaml  solutions.yaml  temporal_gaps.yaml  why.yaml
prototype/: README.md  agent.html  agents.html  alerts.html  analytics.html  app.js  chat.html  compose.html  connections.html  geo.html  inbox.html  index.html  keywords.html  knowledge.html  onboarding.html  opportunities.html  pricing.html  proto.css  queue.html  settings.html  subreddit.html
scripts/: build-pyinstaller.sh  crawl_research.py  dev.sh  doctor.py  fetch-ffmpeg.sh  finish-publish.sh  ingest_marketing_books.py  mcp_doctor.sh  mcp_http_daemon.sh  mem_diff.sh  mem_probe.sh  onedir-launcher.sh  perf-test.py  preflight-release.sh  promote-release-if-complete.sh  publish-mac.sh  pyinstaller-entrypoint.py  release.sh  rename-public-release-assets.sh  setup-ci.sh  setup.sh  test_mcp_queue.sh  validate.sh  verify-dmg.sh  wip-snapshot.sh
tests/: _reach_mock.py  conftest.py  tabs.spec.js  test_academic_citations.py  test_academic_integrity.py  test_academic_mode.py  test_academic_passport.py  test_academic_review.py  test_agent_goal.py  test_associations.py  test_bilibili.py  test_brief.py  test_brief_mcp.py  test_brief_schema.py  test_build_provenance.py  test_build_runs_invariants.py  test_cancel_contract.py  test_chat_doctor.py  test_chat_llm_dispatch.py  test_chat_palace_timeout.py  test_chat_retrieval.py  test_chat_source_intent.py  test_chat_timeout.py  test_cli_collect_growth.py  test_cli_daemon_env.py  test_clustering_fallback.py  test_competitor_cli.py  (+99 more)
(+1138 files in other folders)
