[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-myind"
version = "0.1.0"
description = "Reddit research CLI + MCP server — PRAW-based fetch, SQLite store, pluggable LLM analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shantanu Bombatkar" }]
dependencies = [
    "praw>=7.7",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "sqlite-utils>=3.36",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version<'3.11'",
]



[project.optional-dependencies]
sources = [
    "google-play-scraper>=1.2",
    "pytrends>=4.9",
    "feedparser>=6.0",
    "networkx>=3.1",
    "scipy>=1.11",
    "pypdf>=4.0",
]
# Structure-aware PDF extraction (headings / tables / references preserved).
# Needs Java 11+ on the machine; falls back to pypdf transparently if
# unavailable. Install on dev/server machines for higher-quality extraction
# on academic papers — skip on minimal deployments.
ingest-rich = [
    "opendataloader-pdf>=2.0",
]
analyze = [
    "anthropic>=0.34",
    "openai>=1.40",
    "httpx>=0.27",
]
mcp = [
    "fastmcp>=0.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "pyinstaller>=6.10",
]
all = ["reddit-myind[analyze,mcp,sources,dev]"]

[project.scripts]
reddit-myind = "reddit_research.cli.main:app"
reddit-cli   = "reddit_research.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true

