[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-myind"
version = "0.1.0"
description = "Reddit research CLI + MCP server — PRAW-based fetch, SQLite store, pluggable LLM analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shantanu Bombatkar" }]
dependencies = [
    "praw>=7.7",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "sqlite-utils>=3.36",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version<'3.11'",
    # LLM SDKs — core to the chat / enrichment / report-pro flows. Kept in
    # base deps (not the `analyze` extras) because Ollama's chat endpoint
    # is served through the OpenAI SDK (Ollama exposes /v1 OpenAI-compat),
    # so even users who only want local LLMs need `openai` installed. Same
    # for Anthropic — the first-class BYOK provider shouldn't need extras.
    "openai>=1.40",
    "anthropic>=0.34",
]



[project.optional-dependencies]
sources = [
    "google-play-scraper>=1.2",
    "pytrends>=4.9",
    "feedparser>=6.0",
    "networkx>=3.1",
    "scipy>=1.11",
    "pypdf>=4.0",
]
# Structure-aware PDF extraction (headings / tables / references preserved).
# Needs Java 11+ on the machine; falls back to pypdf transparently if
# unavailable. Install on dev/server machines for higher-quality extraction
# on academic papers — skip on minimal deployments.
ingest-rich = [
    "opendataloader-pdf>=2.0",
]
analyze = [
    # anthropic + openai are now base deps (chat + Ollama need them).
    # This group is retained for backwards compat with existing install
    # scripts / docs that reference `--extra analyze`; it's now a no-op
    # beyond pulling httpx (which is also a base dep).
    "httpx>=0.27",
]
# Local semantic search over the corpus — ChromaDB PersistentClient with the
# bundled all-MiniLM-L6-v2 ONNX embedder. Zero external API calls. ~200 MB
# install (onnxruntime + chromadb + sentence-transformers' onnx model). All
# offline; all local. Adds ~15 ms / post on ingest for embedding; ~15 ms p50
# on a k=10 search at 2K documents. Separate .sqlite3 file under the app's
# data dir (doesn't touch the existing reddit.db).
retrieval = [
    "chromadb>=1.5.4,<2",
    "rank-bm25>=0.2.2",
]
mcp = [
    "fastmcp>=0.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "pyinstaller>=6.10",
]
all = ["reddit-myind[analyze,mcp,sources,dev]"]

[project.scripts]
reddit-myind = "reddit_research.cli.main:app"
reddit-cli   = "reddit_research.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true

