[package]
name = "gapmap"
version = "0.1.0"
description = "Gap Map — Multi-source research gap finder"
authors = ["Shantanu Bombatkar"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
# Used by list_provider_models to call cloud LLM /models endpoints
# server-side — bypasses browser CORS for Anthropic/OpenAI/Groq/etc. which
# don't allow webview origins. rustls-tls avoids pulling in OpenSSL at build.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
