[package]
name = "gapmap"
version = "0.1.11"
description = "Gap Map — Multi-source research gap finder"
authors = ["Shantanu Bombatkar"]
homepage = "https://gapmap.myind.ai/"
repository = "https://github.com/myind-ai/gapmap"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
# Used by list_provider_models to call cloud LLM /models endpoints
# server-side — bypasses browser CORS for Anthropic/OpenAI/Groq/etc. which
# don't allow webview origins. rustls-tls avoids pulling in OpenSSL at build.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
jsonwebtoken = "9"
keyring = "2"
# Native SQLite — bypasses Python sidecar for read queries. Every sidecar
# spawn takes 30-70s on a fresh DMG (PyInstaller boot + Gatekeeper verify
# every `.so` on each launch). Opening the same WAL-mode DB from Rust is
# safe (multi-reader, one-writer) and makes every list / search / filter
# a single-digit-millisecond call.
rusqlite = { version = "0.32", features = ["bundled"] }
dotenvy = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
